# FORGECLOUD

3d_frontend/: index.html  main.js  notes.md  style.css
forgecloud-backend/: .env  .gitignore  Cargo.toml  forgecloud.db  scratch.rs
forgecloud-backend/chunks/: e70f0950-58fd-4063-9880-c368fcff63ed
forgecloud-backend/migrations/: 20240101000000_init.sql  20240102000000_add_folders.sql  20240103000000_add_shares.sql  20240104000000_upload_sessions.sql
forgecloud-backend/src/: main.rs
forgecloud-backend/src/api/: delete.rs  download.rs  folders.rs  list.rs  mod.rs  shares.rs  upload.rs
forgecloud-backend/src/db/: mod.rs
forgecloud-backend/src/engine/: chunker.rs  crypto.rs  mod.rs  storage.rs
forgecloud-backend/tests/: chunker_integration.rs  session_integration.rs
forgecloud-frontend/: copy_img.sh  package-lock.json  package.json
forgecloud-frontend/src/app/: page.js
forgecloud-frontend/src/app/s/[token]/: page.js
forgecloud-frontend/src/components/: DownloadCard.js  ParticleExplosion.jsx  PreviewModal.js  ShareModal.js  UploadCard.js  VaultLedger.js
forgecloud-frontend/src/constants/: mimeTypes.js  routes.js
forgecloud-frontend/src/hooks/: useUpload.js  useVault.js
forgecloud-frontend/src/lib/: api.js  config.js  helpers.js  types.js
