[package]
name = "forgecloud-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "migrate"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aes-gcm = "0.10.3"
rand = "0.10.1"
hex = "0.4.3"
reqwest = { version = "0.13.4", features = ["json", "multipart", "stream"] }
serde_json = "1.0.150"
dotenvy = "0.15"
tower-http = { version = "0.7.0", features = ["cors"] }
tower_governor = "0.4"
bcrypt = "0.19.2"
sha2 = "0.10"
